<resources>
    <string name="app_name">PC Parts Ireland</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PC Parts Ireland</string>
    <string name="nav_header_subtitle">pcpartsireland@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_parts_list">PC Parts</string>
    <string name="menu_create_advert">Place Advert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_place_advert">Place Ad</string>
    <string name="menu_my_adverts">My Adverts</string>
    <string name="menu_favourites">Favourite Parts</string>
    <string name="card_price_label">Price</string>
    <string name="card_price">0</string>
    <string name="card_name">Name</string>
    <string name="card_category">Category</string>
    <string name="ad_component">Part Name</string>
    <string name="ad_model">Part Name</string>
    <string name="ad_brand">Make &amp; Model</string>
    <string name="ad_price">Price</string>
    <string name="ad_description">Describe the PC part your are selling</string>
    <string name="button_createAdvert">SELL NOW</string>
    <string name="button_addImage">ADD IMAGE</string>
    <string name="add_images">Upload an Image</string>
    <string name="for_sale">For Sale</string>
    <string name="wanted">Wanted</string>
    <string name="ad_type">Advert Type</string>
    <string name="ad_category">Category</string>
    <string name="ad_title">Advert Title</string>
    <string name="ad_quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="one_euro">1</string>
    <string name="image_picker">Select Image</string>

    <string-array name="categories">
        <item>CPU</item>
        <item>GPU</item>
        <item>RAM</item>
        <item>Motherboard</item>
        <item>SSD</item>
        <item>Hard Drives</item>
        <item>Power Supply</item>
        <item>Case</item>
        <item>CPU Fan</item>
        <item>Case Fan</item>
        <item>Cables</item>
        <item>Monitor</item>
        <item>Keyboard</item>
        <item>Mouse</item>
        <item>Speaker</item>
        <item>Extras</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_enterTitle">Please Enter the Advert Title</string>
    <string name="title_activity_create_advert">Create Advert</string>
    <string name="nav_cart">Cart</string>
    <string name="saveBtn">Save</string>
    <string name="changeImageBtn">Change Image</string>
    <string name="view_ad_type">Advert Type</string>
    <string name="view_quantity">1</string>
    <string name="view_category">Category</string>
    <string name="view_title">Title</string>
    <string name="card_description_label">Description</string>
    <string name="view_description">Description goes here</string>
    <string name="menu_delete">Delete</string>
    <string name="euro">€</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Register Now</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>
    <string name="access_control">Access Control</string>
    <string name="action_edit">Edit Advert</string>
    <string name="loginWelcome">Welcome</string>

    <!--END Firebase Resources-->
</resources>