<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="180dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceHeader"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imageIcon"
            android:textColor="@color/white"
            android:text="@string/card_name"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/imageIcon"
            android:textColor="@color/dark_blue"
            android:text="@string/card_category"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/priceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/price"
            android:textColor="@color/dark_blue"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="0dp"
            android:text="@string/card_price_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            tools:text="@string/card_price" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>