<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/advertTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ad_title"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="25dp"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/advertPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ad_price"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/mySpinner"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="175dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="300dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingEnd="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textInputLayout"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/advertDescription"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top"
                    android:hint="@string/ad_description"
                    android:inputType="text|textMultiLine"
                    android:maxLength="200"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/createAdvert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:stateListAnimator="@null"
        android:text="@string/button_createAdvert"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="73dp"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>